hphp/test/slow/sealed/sealed_classes17.php.expectf
Fatal error: Enums cannot be sealed. in %s/hphp/test/slow/sealed/sealed_classes17.php on line 4
